--- a/mengniu/pom.xml
+++ b/mengniu/pom.xml
@@ -47,10 +47,19 @@
 			<version>1.2.17</version>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
+		  <groupId>org.apache.poi</groupId>
+		  <artifactId>poi-scratchpad</artifactId>
+		  <version>3.10-beta2</version>
 		</dependency>
+		<dependency>
+  <groupId>org.apache.poi</groupId>
+  <artifactId>poi-ooxml</artifactId>
+  <version>3.10-beta2</version>
+</dependency>
 	</dependencies>
+	
+	<build>
+		<defaultGoal>compile</defaultGoal>
+	</build>
+	
 </project>
