--- a/mengniu/pom.xml
+++ b/mengniu/pom.xml
@@ -51,7 +51,7 @@
 			<artifactId>poi</artifactId>
 			<version>3.9</version>
 		</dependency>
-				<dependency>
+		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-scratchpad</artifactId>
 			<version>3.9</version>
@@ -61,10 +61,16 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>3.9</version>
 		</dependency>
+		<dependency>
+			<!-- jsoup HTML parser library @ http://jsoup.org/ -->
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.3</version>
+		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<defaultGoal>compile</defaultGoal>
 	</build>
-	
+
 </project>
