--- a/mengniu/pom.xml
+++ b/mengniu/pom.xml
@@ -77,6 +77,11 @@
 			<artifactId>poi-excelant</artifactId>
 			<version>3.9</version>
 		</dependency>
+		<dependency>
+			<groupId>net.lingala.zip4j</groupId>
+			<artifactId>zip4j</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
