--- a/mengniu/src/main/resources/system.properties
+++ b/mengniu/src/main/resources/system.properties
@@ -1,5 +1,8 @@
 daterange.enable=N
 daterange.startDate=2014-01-01
 daterange.endDate=2014-01-08
-tesseract.path=/opt/local/bin
-validate.image.path=/Users/haibin/Documents/temp
+
+datapull.thread.amount=10
+
+tesseract.path=/opt/local/bin/
+validate.image.path=/Users/haibin/Documents/temp/
