--- a/mengniu/src/main/resources/yonghui.properties
+++ b/mengniu/src/main/resources/yonghui.properties
@@ -1,7 +1,3 @@
-#
-yonghui.startDate=2014-01-01
-yonghui.endDate=2014-01-08
+yonghui.receive.filePath=/Users/haibin/Documents/temp/
 
-yonghui.receive.filePath=
-
-yonghui.order.filePaht=
+yonghui.order.filePath=
