--- a/mengniu/src/main/resources/system.properties
+++ b/mengniu/src/main/resources/system.properties
@@ -1,8 +1,8 @@
-daterange.enable=N
-daterange.startDate=2014-01-01
+daterange.enable=Y
+daterange.startDate=2013-12-20
 daterange.endDate=2014-01-08
 
-datapull.thread.amount=10
+datapull.thread.amount=1
 
 tesseract.path=/opt/local/bin/
 validate.image.path=/Users/haibin/Documents/temp/
