--- a/mengniu/src/main/resources/carrefour.properties
+++ b/mengniu/src/main/resources/carrefour.properties
@@ -1,3 +1,4 @@
-carrefour.receive.filePath=/Users/haibin/Documents/temp/
-
-carrefour.order.filePath=
+carrefour.order.filePath=c:/mengniu/carrefour/order/
+carrefour.receive.source.filePath=c:/mengniu/carrefour/receiving/inbound/
+carrefour.receive.processed.filePath=c:/mengniu/carrefour/receiving/processed/
+carrefour.output.filePath=c:/mengniu/carrefour/output/
