--- a/mengniu/src/main/resources/system.properties
+++ b/mengniu/src/main/resources/system.properties
@@ -4,5 +4,9 @@ daterange.endDate=2014-01-08
 
 datapull.thread.amount=1
 
-tesseract.path=/opt/local/bin/
-validate.image.path=/Users/haibin/Documents/temp/
+tesseract.path=C:/Program Files (x86)/Tesseract-OCR
+validate.image.path=c:/mengniu/temp/
+
+order.header=Order_No	Order_Date	Store_No	Store_Name	Item_Code	Item_Name	Barcode	Quantity	Unit_Price	Total_Price
+receving.header=Order_No	Order_Date	Store_No	Store_Name	Item_Code	Item_Name	Barcode	Quantity	Unit_Price	Total_Price
+output.header=Order_No	Store_No	Receiving_Date	Item_Code	Barcode	Item_Name	Order_Qty	Order_Total_Price	Receiving_Qty	Receiving_Total_Price	Unit_Price
