--- a/mengniu/src/main/resources/yonghui.properties
+++ b/mengniu/src/main/resources/yonghui.properties
@@ -1,3 +1,4 @@
-yonghui.receive.filePath=/Users/haibin/Documents/temp/
-
-yonghui.order.filePath=
+yonghui.order.filePath=c:/mengniu/yonghui/order/
+yonghui.receive.source.filePath=c:/mengniu/yonghui/receiving/inbound/
+yonghui.receive.processed.filePath=c:/mengniu/yonghui/receiving/processed/
+yonghui.output.filePath=c:/mengniu/yonghui/output/
