--- a/mengniu/src/main/resources/metro.properties
+++ b/mengniu/src/main/resources/metro.properties
@@ -1,4 +1,4 @@
 metro.order.filePath=c:/mengniu/metro/order/
-metro.receive.source.filePath=c:/mengniu/metro/receiving/inbound/
-metro.receive.processed.filePath=c:/mengniu/metro/receiving/processed/
+metro.receiving.inbound.filePath=c:/mengniu/metro/receiving/inbound/
+metro.receiving.processed.filePath=c:/mengniu/metro/receiving/processed/
 metro.output.filePath=c:/mengniu/metro/output/
