--- a/mengniu/src/main/resources/tesco.properties
+++ b/mengniu/src/main/resources/tesco.properties
@@ -1,4 +1,4 @@
 tesco.order.filePath=c:/mengniu/tesco/order/
-tesco.receive.source.filePath=c:/mengniu/tesco/receiving/inbound/
-tesco.receive.processed.filePath=c:/mengniu/tesco/receiving/processed/
+tesco.receiving.inbound.filePath=c:/mengniu/tesco/receiving/inbound/
+tesco.receiving.processed.filePath=c:/mengniu/tesco/receiving/processed/
 tesco.output.filePath=c:/mengniu/tesco/output/
