--- a/mengniu/src/main/resources/yonghui.properties
+++ b/mengniu/src/main/resources/yonghui.properties
@@ -1,4 +1,4 @@
 yonghui.order.filePath=c:/mengniu/yonghui/order/
-yonghui.receive.source.filePath=c:/mengniu/yonghui/receiving/inbound/
-yonghui.receive.processed.filePath=c:/mengniu/yonghui/receiving/processed/
+yonghui.receiving.inbound.filePath=c:/mengniu/yonghui/receiving/inbound/
+yonghui.receiving.processed.filePath=c:/mengniu/yonghui/receiving/processed/
 yonghui.output.filePath=c:/mengniu/yonghui/output/
