--- a/mengniu/src/main/resources/system.properties
+++ b/mengniu/src/main/resources/system.properties
@@ -1,10 +1,10 @@
 daterange.enable=Y
-daterange.startDate=2013-08-20
+daterange.startDate=2013-12-15
 daterange.endDate=2014-01-08
 
 datapull.thread.amount=1
 
-tesseract.path=C:/Program Files (x86)/Tesseract-OCR
+tesseract.path=C:/Tesseract-OCR/
 validate.image.path=c:/mengniu/temp/
 
 order.header=Order_No	Order_Date	Store_No	Store_Name	Item_Code	Item_Name	Barcode	Quantity	Unit_Price	Total_Price
