--- a/mengniu/src/main/resources/carrefour.properties
+++ b/mengniu/src/main/resources/carrefour.properties
@@ -1,4 +1,4 @@
 carrefour.order.filePath=c:/mengniu/carrefour/order/
-carrefour.receiving.source.filePath=c:/mengniu/carrefour/receiving/inbound/
+carrefour.receiving.inbound.filePath=c:/mengniu/carrefour/receiving/inbound/
 carrefour.receiving.processed.filePath=c:/mengniu/carrefour/receiving/processed/
 carrefour.output.filePath=c:/mengniu/carrefour/output/
