--- a/mengniu/pom.xml
+++ b/mengniu/pom.xml
@@ -82,6 +82,13 @@
 			<artifactId>zip4j</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+		<dependency>
+    		<groupId>nl.fountain</groupId>
+    		<artifactId>xelem</artifactId>
+    		<version>1.0</version>
+    		<scope>system</scope>
+    		<systemPath>${project.basedir}/lib/xelem.jar</systemPath>
+		</dependency>
 	</dependencies>
 
 	<build>
