--- a/mengniu/pom.xml
+++ b/mengniu/pom.xml
@@ -67,7 +67,7 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.7.3</version>
 		</dependency>
-		<dependency>	
+		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml-schemas</artifactId>
 			<version>3.9</version>
@@ -82,17 +82,62 @@
 			<artifactId>zip4j</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+
 		<dependency>
-    		<groupId>nl.fountain</groupId>
-    		<artifactId>xelem</artifactId>
-    		<version>1.0</version>
-    		<scope>system</scope>
-    		<systemPath>${project.basedir}/lib/xelem.jar</systemPath>
+			<groupId>nl.fountain</groupId>
+			<artifactId>xelem</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/xelem.jar</systemPath>
 		</dependency>
 	</dependencies>
 
 	<build>
 		<defaultGoal>compile</defaultGoal>
+
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/lib</outputDirectory>
+							<overWriteReleases>false</overWriteReleases>
+							<overWriteSnapshots>false</overWriteSnapshots>
+							<overWriteIfNewer>true</overWriteIfNewer>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+<!-- 打jar包时需要把配置文件给排除在外 -->
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-jar-plugin</artifactId>
+    <executions>
+        <execution>
+            <phase>package</phase>
+            <goals>
+                <goal>jar</goal>
+            </goals>
+            <configuration>
+                <classifier>lib</classifier>
+                <excludes>
+                    <exclude>*.properties</exclude>
+                    <exclude>*.xls</exclude>
+                </excludes>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
+
+		</plugins>
 	</build>
+
 
 </project>
