--- a/mengniu/src/main/resources/carrefour.properties
+++ b/mengniu/src/main/resources/carrefour.properties
@@ -1,4 +1,13 @@
+
+#订单下载目录
 carrefour.order.filePath=c:/mengniu/carrefour/order/
+
+#收货单下载目录
 carrefour.receiving.inbound.filePath=c:/mengniu/carrefour/receiving/inbound/
+
+#收货单处理完成的存档目录
 carrefour.receiving.processed.filePath=c:/mengniu/carrefour/receiving/processed/
+
+#合并完成的最终文件目录
 carrefour.output.filePath=c:/mengniu/carrefour/output/
+
