--- a/mengniu/pom.xml
+++ b/mengniu/pom.xml
@@ -94,7 +94,34 @@
 
 	<build>
 		<defaultGoal>compile</defaultGoal>
-
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.apache.maven.plugins</groupId>
+										<artifactId>maven-dependency-plugin</artifactId>
+										<versionRange>[2.0,)</versionRange>
+										<goals>
+											<goal>copy-dependencies</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore />
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -115,26 +142,26 @@
 					</execution>
 				</executions>
 			</plugin>
-<!-- 打jar包时需要把配置文件给排除在外 -->
-<plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-jar-plugin</artifactId>
-    <executions>
-        <execution>
-            <phase>package</phase>
-            <goals>
-                <goal>jar</goal>
-            </goals>
-            <configuration>
-                <jarName>mengniu</jarName>
-                <excludes>
-                    <exclude>*.properties</exclude>
-                    <exclude>*.xls</exclude>
-                </excludes>
-            </configuration>
-        </execution>
-    </executions>
-</plugin>
+			<!-- 打jar包时需要把配置文件给排除在外 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+						<configuration>
+							<jarName>mengniu</jarName>
+							<excludes>
+								<exclude>*.properties</exclude>
+								<exclude>*.xls</exclude>
+							</excludes>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 
 		</plugins>
 	</build>
