Update Date config

--- a/mengniu/src/main/resources/metro.properties
+++ b/mengniu/src/main/resources/metro.properties
@@ -1,4 +1,24 @@
+
+#数据处理是否为日期区间段
+#Y - 使用日期区间段
+#N - 使用昨天的日期
+daterange.enable=Y
+
+#日期区间段开始日期
+daterange.startDate=2014-01-01
+
+#日期区间段结束日期
+daterange.endDate=2014-01-05
+
+
+#订单下载目录
 metro.order.filePath=c:/mengniu/metro/order/
+
+#收货单下载目录
 metro.receiving.inbound.filePath=c:/mengniu/metro/receiving/inbound/
+
+#收货单处理完成的存档目录
 metro.receiving.processed.filePath=c:/mengniu/metro/receiving/processed/
+
+#合并完成的最终文件目录
 metro.output.filePath=c:/mengniu/metro/output/
