--- a/mengniu/src/main/resources/tesco.properties
+++ b/mengniu/src/main/resources/tesco.properties
@@ -1,4 +1,24 @@
+
+#数据处理是否为日期区间段
+#Y - 使用日期区间段
+#N - 使用昨天的日期
+daterange.enable=Y
+
+#日期区间段开始日期
+daterange.startDate=2014-01-01
+
+#日期区间段结束日期
+daterange.endDate=2014-01-05
+
+
+#订单下载目录
 tesco.order.filePath=c:/mengniu/tesco/order/
+
+#收货单下载目录
 tesco.receiving.inbound.filePath=c:/mengniu/tesco/receiving/inbound/
+
+#收货单处理完成的存档目录
 tesco.receiving.processed.filePath=c:/mengniu/tesco/receiving/processed/
+
+#合并完成的最终文件目录
 tesco.output.filePath=c:/mengniu/tesco/output/
