--- a/mengniu/src/main/resources/carrefour.properties
+++ b/mengniu/src/main/resources/carrefour.properties
@@ -2,13 +2,13 @@
 #数据处理是否为日期区间段
 #Y - 使用日期区间段
 #N - 使用昨天的日期
-daterange.enable=Y
+carrefour.daterange.enable=Y
 
 #日期区间段开始日期
-daterange.startDate=2014-01-01
+carrefour.daterange.startDate=2014-01-01
 
 #日期区间段结束日期
-daterange.endDate=2014-01-05
+carrefour.daterange.endDate=2014-01-05
 
 #订单下载目录
 carrefour.order.filePath=c:/mengniu/carrefour/order/
