--- a/mengniu/src/main/resources/metro.properties
+++ b/mengniu/src/main/resources/metro.properties
@@ -2,13 +2,13 @@
 #数据处理是否为日期区间段
 #Y - 使用日期区间段
 #N - 使用昨天的日期
-daterange.enable=Y
+metro.daterange.enable=Y
 
 #日期区间段开始日期
-daterange.startDate=2014-01-01
+metro.daterange.startDate=2014-01-01
 
 #日期区间段结束日期
-daterange.endDate=2014-01-05
+metro.daterange.endDate=2014-01-05
 
 
 #订单下载目录
