--- a/mengniu/src/main/resources/carrefour.properties
+++ b/mengniu/src/main/resources/carrefour.properties
@@ -10,6 +10,9 @@ carrefour.daterange.startDate=2014-01-01
 #日期区间段结束日期
 carrefour.daterange.endDate=2014-01-05
 
+#每步操作等待时间(毫秒)
+carrefour.sleep.time=1000
+
 #订单下载目录
 carrefour.order.filePath=c:/mengniu/carrefour/order/
 
