--- a/mengniu/src/main/resources/metro.properties
+++ b/mengniu/src/main/resources/metro.properties
@@ -10,6 +10,8 @@ metro.daterange.startDate=2014-01-01
 #日期区间段结束日期
 metro.daterange.endDate=2014-01-05
 
+#每步操作等待时间(毫秒)
+metro.sleep.time=1000
 
 #订单下载目录
 metro.order.filePath=c:/mengniu/metro/order/
