--- a/mengniu/src/main/resources/tesco.properties
+++ b/mengniu/src/main/resources/tesco.properties
@@ -10,6 +10,8 @@ tesco.daterange.startDate=2014-01-01
 #日期区间段结束日期
 tesco.daterange.endDate=2014-01-05
 
+#每步操作等待时间(毫秒)
+tesco.sleep.time=1000
 
 #订单下载目录
 tesco.order.filePath=c:/mengniu/tesco/order/
