--- a/mengniu/src/main/resources/yonghui.properties
+++ b/mengniu/src/main/resources/yonghui.properties
@@ -10,6 +10,8 @@ yonghui.daterange.startDate=2014-01-01
 #日期区间段结束日期
 yonghui.daterange.endDate=2014-01-05
 
+#每步操作等待时间(毫秒)
+yonghui.sleep.time=1000
 
 #订单下载目录
 yonghui.order.filePath=c:/mengniu/yonghui/order/
