--- a/mengniu/src/main/resources/system.properties
+++ b/mengniu/src/main/resources/system.properties
@@ -20,4 +20,4 @@ receving.header=Order_No	Order_Date	Store_No	Store_Name	Item_Code	Item_Name	Barc
 
 #合并后的文件格式
 #不可自行修改
-output.header=Order_No	Store_No	Receiving_Date	Item_Code	Barcode	Item_Name	Order_Qty	Order_Amount	Receiving_Qty	Receiving_Amount	Unit_Price
+output.header=Order_No	Store_No	Store_Name	Receiving_Date	Item_Code	Barcode	Item_Name	Order_Qty	Order_Amount	Receiving_Qty	Receiving_Amount	Unit_Price
