--- a/mengniu/src/main/resources/rainbow.properties
+++ b/mengniu/src/main/resources/rainbow.properties
@@ -10,6 +10,9 @@ rainbow.daterange.startDate=2014-01-01
 #日期区间段结束日期
 rainbow.daterange.endDate=2014-01-05
 
+#每步操作等待时间(毫秒)
+rainbow.sleep.time=1000
+
 #订单下载目录
 rainbow.order.filePath=c:/mengniu/rainbow/order/
 
