--- a/mengniu/src/main/resources/system.properties
+++ b/mengniu/src/main/resources/system.properties
@@ -15,7 +15,7 @@ order.header=Order_No	Order_Date	Store_No	Store_Name	Item_Code	Item_Name	Barcode
 
 #系统运行时处理的收货单文件格式
 #不可自行修改
-receving.header=Order_No	Order_Date	Store_No	Store_Name	Item_Code	Item_Name	Barcode	Quantity	Unit_Price	Amount
+receving.header=Order_No	Receiving_Date	Store_No	Store_Name	Item_Code	Item_Name	Barcode	Quantity	Unit_Price	Amount
 
 
 #合并后的文件格式
