--- a/mengniu/src/main/resources/log4j.properties
+++ b/mengniu/src/main/resources/log4j.properties
@@ -9,6 +9,7 @@ log4j.appender.logfile.DatePattern = .yyyy-MM-dd
 log4j.appender.logfile.File=log/app.log
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d{ABSOLUTE} %5p %t %c{2}:%L - %m%n
+log4j.appender.logfile.encoding=UTF-8
 
 log4j.logger.com.rsi.mengniu.retailer.common.service=INFO, carrefour,tesco,yonghui
 log4j.logger.com.rsi.mengniu.retailer.carrefour.service=INFO, carrefour
@@ -22,6 +23,7 @@ log4j.appender.carrefour.DatePattern = .yyyy-MM-dd
 log4j.appender.carrefour.File=log/carrefour.log
 log4j.appender.carrefour.layout=org.apache.log4j.PatternLayout
 log4j.appender.carrefour.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.carrefour.encoding=UTF-8
 
 
 log4j.appender.tesco=org.apache.log4j.DailyRollingFileAppender
@@ -29,10 +31,11 @@ log4j.appender.tesco.DatePattern = .yyyy-MM-dd
 log4j.appender.tesco.File=log/tesco.log
 log4j.appender.tesco.layout=org.apache.log4j.PatternLayout
 log4j.appender.tesco.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.tesco.encoding=UTF-8
 
 log4j.appender.yonghui=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.yonghui.DatePattern = .yyyy-MM-dd
 log4j.appender.yonghui.File=log/yonghui.log
 log4j.appender.yonghui.layout=org.apache.log4j.PatternLayout
 log4j.appender.yonghui.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
-
+log4j.appender.yonghui.encoding=UTF-8
