--- a/mengniu/src/main/resources/system.properties
+++ b/mengniu/src/main/resources/system.properties
@@ -4,7 +4,7 @@
 datapull.thread.amount=1
 
 #Tesseract软件安装目录
-tesseract.path=C:/Tesseract/
+tesseract.path=/opt/local/bin/
 
 #验证码图片的临时存放目录
 validate.image.path=c:/mengniu/temp/
