--- a/mengniu/src/main/resources/renrenle.properties
+++ b/mengniu/src/main/resources/renrenle.properties
@@ -13,6 +13,9 @@ renrenle.daterange.endDate=2014-01-15
 #每步操作等待时间(毫秒)
 renrenle.sleep.time=1000
 
+#销售数据下载目录
+renrenle.sales.filePath=c:/mengniu/renrenle/sales/
+
 #订单下载目录
 renrenle.order.filePath=c:/mengniu/renrenle/order/
 
