Add sales data configuration

--- a/mengniu/src/main/resources/carrefour.properties
+++ b/mengniu/src/main/resources/carrefour.properties
@@ -13,6 +13,8 @@ carrefour.daterange.endDate=2014-01-15
 #每步操作等待时间(毫秒)
 carrefour.sleep.time=1000
 
+
+###############################
 #订单下载目录
 carrefour.order.filePath=c:/mengniu/carrefour/order/
 
@@ -22,6 +24,16 @@ carrefour.receiving.inbound.filePath=c:/mengniu/carrefour/receiving/inbound/
 #收货单处理完成的存档目录
 carrefour.receiving.processed.filePath=c:/mengniu/carrefour/receiving/processed/
 
-#合并完成的最终文件目录
-carrefour.output.filePath=c:/mengniu/carrefour/output/
+#合并完成的最终文件目录 - 订单
+carrefour.output.order.filePath=c:/mengniu/carrefour/output/order/
+
+###############################
+#销售数据下载目录
+carrefour.sales.inbound.filePath=c:/mengniu/carrefour/sales/inbound/
+
+#销售数据处理完成的目录
+carrefour.sales.processed.filePath=c:/mengniu/carrefour/sales/processed/
+
+#销售单
+carrefour.output.filePath=c:/mengniu/carrefour/output/sales/
 
