--- a/mengniu/src/main/resources/hualian.properties
+++ b/mengniu/src/main/resources/hualian.properties
@@ -13,6 +13,8 @@ hualian.daterange.endDate=2014-01-15
 #每步操作等待时间(毫秒)
 hualian.sleep.time=1000
 
+
+###############################
 #订单下载目录
 hualian.order.filePath=c:/mengniu/hualian/order/
 
@@ -22,5 +24,15 @@ hualian.receiving.inbound.filePath=c:/mengniu/hualian/receiving/inbound/
 #收货单处理完成的存档目录
 hualian.receiving.processed.filePath=c:/mengniu/hualian/receiving/processed/
 
-#合并完成的最终文件目录
-hualian.output.filePath=c:/mengniu/hualian/output/
+#合并完成的最终文件目录 - 订单
+hualian.output.order.filePath=c:/mengniu/hualian/output/order/
+
+###############################
+#销售数据下载目录
+hualian.sales.inbound.filePath=c:/mengniu/hualian/sales/inbound/
+
+#销售数据处理完成的目录
+hualian.sales.processed.filePath=c:/mengniu/hualian/sales/processed/
+
+#销售单
+hualian.output.filePath=c:/mengniu/hualian/output/sales/
