--- a/mengniu/src/main/resources/metro.properties
+++ b/mengniu/src/main/resources/metro.properties
@@ -13,6 +13,8 @@ metro.daterange.endDate=2014-01-18
 #每步操作等待时间(毫秒)
 metro.sleep.time=0
 
+
+###############################
 #订单下载目录
 metro.order.filePath=c:/mengniu/metro/order/
 
@@ -22,5 +24,15 @@ metro.receiving.inbound.filePath=c:/mengniu/metro/receiving/inbound/
 #收货单处理完成的存档目录
 metro.receiving.processed.filePath=c:/mengniu/metro/receiving/processed/
 
-#合并完成的最终文件目录
-metro.output.filePath=c:/mengniu/metro/output/
+#合并完成的最终文件目录 - 订单
+metro.output.order.filePath=c:/mengniu/metro/output/order/
+
+###############################
+#销售数据下载目录
+metro.sales.inbound.filePath=c:/mengniu/metro/sales/inbound/
+
+#销售数据处理完成的目录
+metro.sales.processed.filePath=c:/mengniu/metro/sales/processed/
+
+#销售单
+metro.output.filePath=c:/mengniu/metro/output/sales/
