--- a/mengniu/src/main/resources/rainbow.properties
+++ b/mengniu/src/main/resources/rainbow.properties
@@ -14,12 +14,25 @@ rainbow.daterange.endDate=2014-01-19
 rainbow.sleep.time=1000
 
 
+###############################
+#订单下载目录
+rainbow.order.filePath=c:/mengniu/rainbow/order/
+
 #收货单下载目录
 rainbow.receiving.inbound.filePath=c:/mengniu/rainbow/receiving/inbound/
 
 #收货单处理完成的存档目录
 rainbow.receiving.processed.filePath=c:/mengniu/rainbow/receiving/processed/
 
-#合并完成的最终文件目录
-rainbow.output.filePath=c:/mengniu/rainbow/output/
+#合并完成的最终文件目录 - 订单
+rainbow.output.order.filePath=c:/mengniu/rainbow/output/order/
 
+###############################
+#销售数据下载目录
+rainbow.sales.inbound.filePath=c:/mengniu/rainbow/sales/inbound/
+
+#销售数据处理完成的目录
+rainbow.sales.processed.filePath=c:/mengniu/rainbow/sales/processed/
+
+#销售单
+rainbow.output.filePath=c:/mengniu/rainbow/output/sales/
