--- a/mengniu/src/main/resources/renrenle.properties
+++ b/mengniu/src/main/resources/renrenle.properties
@@ -13,9 +13,8 @@ renrenle.daterange.endDate=2014-01-15
 #每步操作等待时间(毫秒)
 renrenle.sleep.time=1000
 
-#销售数据下载目录
-renrenle.sales.filePath=c:/mengniu/renrenle/sales/
 
+###############################
 #订单下载目录
 renrenle.order.filePath=c:/mengniu/renrenle/order/
 
@@ -25,5 +24,15 @@ renrenle.receiving.inbound.filePath=c:/mengniu/renrenle/receiving/inbound/
 #收货单处理完成的存档目录
 renrenle.receiving.processed.filePath=c:/mengniu/renrenle/receiving/processed/
 
-#合并完成的最终文件目录
-renrenle.output.filePath=c:/mengniu/renrenle/output/
+#合并完成的最终文件目录 - 订单
+renrenle.output.order.filePath=c:/mengniu/renrenle/output/order/
+
+###############################
+#销售数据下载目录
+renrenle.sales.inbound.filePath=c:/mengniu/renrenle/sales/inbound/
+
+#销售数据处理完成的目录
+renrenle.sales.processed.filePath=c:/mengniu/renrenle/sales/processed/
+
+#销售单
+renrenle.output.filePath=c:/mengniu/renrenle/output/sales/
