--- a/mengniu/src/main/resources/system.properties
+++ b/mengniu/src/main/resources/system.properties
@@ -4,20 +4,23 @@
 datapull.thread.amount=1
 
 #Tesseract软件安装目录
-tesseract.path=/opt/local/bin/
+tesseract.path=C:/Tesseract/
 
 #验证码图片的临时存放目录
 validate.image.path=c:/mengniu/temp/
 
-#系统运行时处理的订单文件格式
+#订单文件格式
 #不可自行修改
 order.header=Order_No	Order_Date	Store_No	Store_Name	Item_Code	Item_Name	Barcode	Quantity	Unit_Price	Amount
 
-#系统运行时处理的收货单文件格式
+#收货单文件格式
 #不可自行修改
 receving.header=Order_No	Receiving_Date	Store_No	Store_Name	Item_Code	Item_Name	Barcode	Quantity	Unit_Price	Amount
 
-
-#合并后的文件格式
+#合并后的订单文件格式
 #不可自行修改
-output.header=Order_No	Store_No	Store_Name	Receiving_Date	Item_Code	Barcode	Item_Name	Order_Qty	Order_Amount	Receiving_Qty	Receiving_Amount	Unit_Price
+output.order.header=Order_No	Store_No	Store_Name	Receiving_Date	Item_Code	Barcode	Item_Name	Order_Qty	Order_Amount	Receiving_Qty	Receiving_Amount	Unit_Price
+
+#销售单文件格式(无合并操作，只有一种格式)
+#不可自行修改
+sales.header=Item_Code	Sales_Date	tore_ID	Sales_Quantity	Sales_Amount
