--- a/mengniu/src/main/resources/tesco.properties
+++ b/mengniu/src/main/resources/tesco.properties
@@ -13,6 +13,8 @@ tesco.daterange.endDate=2014-01-05
 #每步操作等待时间(毫秒)
 tesco.sleep.time=1000
 
+
+###############################
 #订单下载目录
 tesco.order.filePath=c:/mengniu/tesco/order/
 
@@ -22,5 +24,15 @@ tesco.receiving.inbound.filePath=c:/mengniu/tesco/receiving/inbound/
 #收货单处理完成的存档目录
 tesco.receiving.processed.filePath=c:/mengniu/tesco/receiving/processed/
 
-#合并完成的最终文件目录
-tesco.output.filePath=c:/mengniu/tesco/output/
+#合并完成的最终文件目录 - 订单
+tesco.output.order.filePath=c:/mengniu/tesco/output/order/
+
+###############################
+#销售数据下载目录
+tesco.sales.inbound.filePath=c:/mengniu/tesco/sales/inbound/
+
+#销售数据处理完成的目录
+tesco.sales.processed.filePath=c:/mengniu/tesco/sales/processed/
+
+#销售单
+tesco.output.sales.filePath=c:/mengniu/tesco/output/sales/
