--- a/mengniu/src/main/resources/yonghui.properties
+++ b/mengniu/src/main/resources/yonghui.properties
@@ -13,6 +13,8 @@ yonghui.daterange.endDate=2014-01-05
 #每步操作等待时间(毫秒)
 yonghui.sleep.time=1000
 
+
+###############################
 #订单下载目录
 yonghui.order.filePath=c:/mengniu/yonghui/order/
 
@@ -22,5 +24,15 @@ yonghui.receiving.inbound.filePath=c:/mengniu/yonghui/receiving/inbound/
 #收货单处理完成的存档目录
 yonghui.receiving.processed.filePath=c:/mengniu/yonghui/receiving/processed/
 
-#合并完成的最终文件目录
-yonghui.output.filePath=c:/mengniu/yonghui/output/
+#合并完成的最终文件目录 - 订单
+yonghui.output.order.filePath=c:/mengniu/yonghui/output/order/
+
+###############################
+#销售数据下载目录
+yonghui.sales.inbound.filePath=c:/mengniu/yonghui/sales/inbound/
+
+#销售数据处理完成的目录
+yonghui.sales.processed.filePath=c:/mengniu/yonghui/sales/processed/
+
+#销售单
+yonghui.output.sales.filePath=c:/mengniu/yonghui/output/sales/
