--- a/mengniu/src/main/resources/carrefour.properties
+++ b/mengniu/src/main/resources/carrefour.properties
@@ -35,5 +35,5 @@ carrefour.sales.inbound.filePath=c:/mengniu/carrefour/sales/inbound/
 carrefour.sales.processed.filePath=c:/mengniu/carrefour/sales/processed/
 
 #销售单
-carrefour.output.filePath=c:/mengniu/carrefour/output/sales/
+carrefour.output.sales.filePath=c:/mengniu/carrefour/output/sales/
 
