--- a/mengniu/src/main/resources/hualian.properties
+++ b/mengniu/src/main/resources/hualian.properties
@@ -35,4 +35,4 @@ hualian.sales.inbound.filePath=c:/mengniu/hualian/sales/inbound/
 hualian.sales.processed.filePath=c:/mengniu/hualian/sales/processed/
 
 #销售单
-hualian.output.filePath=c:/mengniu/hualian/output/sales/
+hualian.output.sales.filePath=c:/mengniu/hualian/output/sales/
