--- a/mengniu/src/main/resources/metro.properties
+++ b/mengniu/src/main/resources/metro.properties
@@ -35,4 +35,4 @@ metro.sales.inbound.filePath=c:/mengniu/metro/sales/inbound/
 metro.sales.processed.filePath=c:/mengniu/metro/sales/processed/
 
 #销售单
-metro.output.filePath=c:/mengniu/metro/output/sales/
+metro.output.sales.filePath=c:/mengniu/metro/output/sales/
