--- a/mengniu/src/main/resources/rainbow.properties
+++ b/mengniu/src/main/resources/rainbow.properties
@@ -35,4 +35,4 @@ rainbow.sales.inbound.filePath=c:/mengniu/rainbow/sales/inbound/
 rainbow.sales.processed.filePath=c:/mengniu/rainbow/sales/processed/
 
 #销售单
-rainbow.output.filePath=c:/mengniu/rainbow/output/sales/
+rainbow.output.sales.filePath=c:/mengniu/rainbow/output/sales/
