--- a/mengniu/src/main/resources/renrenle.properties
+++ b/mengniu/src/main/resources/renrenle.properties
@@ -35,4 +35,4 @@ renrenle.sales.inbound.filePath=c:/mengniu/renrenle/sales/inbound/
 renrenle.sales.processed.filePath=c:/mengniu/renrenle/sales/processed/
 
 #销售单
-renrenle.output.filePath=c:/mengniu/renrenle/output/sales/
+renrenle.output.sales.filePath=c:/mengniu/renrenle/output/sales/
