--- a/mengniu/src/main/resources/system.properties
+++ b/mengniu/src/main/resources/system.properties
@@ -23,4 +23,4 @@ output.order.header=Order_No	Store_No	Store_Name	Receiving_Date	Item_Code	Barcod
 
 #销售单文件格式(无合并操作，只有一种格式)
 #不可自行修改
-sales.header=Item_Code	Item_Name	Sales_Date	tore_ID	Sales_Quantity	Sales_Amount
+sales.header=Item_Code	Item_Name	Sales_Date	Store_ID	Sales_Quantity	Sales_Amount
