--- a/mengniu/src/main/resources/log4j.properties
+++ b/mengniu/src/main/resources/log4j.properties
@@ -15,6 +15,10 @@ log4j.logger.com.rsi.mengniu.retailer.common.service=INFO, carrefour,tesco,yongh
 log4j.logger.com.rsi.mengniu.retailer.carrefour.service=INFO, carrefour
 log4j.logger.com.rsi.mengniu.retailer.tesco.service=INFO, tesco
 log4j.logger.com.rsi.mengniu.retailer.yonghui.service=INFO, yonghui
+log4j.logger.com.rsi.mengniu.retailer.hualian.service=INFO, hualian
+log4j.logger.com.rsi.mengniu.retailer.metro.service=INFO, metro
+log4j.logger.com.rsi.mengniu.retailer.renrenle.service=INFO, renrenle
+log4j.logger.com.rsi.mengniu.retailer.rainbow.service=INFO, rainbow
 
 
 
@@ -39,3 +43,41 @@ log4j.appender.yonghui.File=log/yonghui.log
 log4j.appender.yonghui.layout=org.apache.log4j.PatternLayout
 log4j.appender.yonghui.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
 log4j.appender.yonghui.encoding=UTF-8
+
+
+log4j.appender.carrefour=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.carrefour.DatePattern = .yyyy-MM-dd
+log4j.appender.carrefour.File=log/carrefour.log
+log4j.appender.carrefour.layout=org.apache.log4j.PatternLayout
+log4j.appender.carrefour.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.carrefour.encoding=UTF-8
+
+
+log4j.appender.hualian=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.hualian.DatePattern = .yyyy-MM-dd
+log4j.appender.hualian.File=log/hualian.log
+log4j.appender.hualian.layout=org.apache.log4j.PatternLayout
+log4j.appender.hualian.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.hualian.encoding=UTF-8
+
+
+log4j.appender.metro=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.metro.DatePattern = .yyyy-MM-dd
+log4j.appender.metro.File=log/metro.log
+log4j.appender.metro.layout=org.apache.log4j.PatternLayout
+log4j.appender.metro.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.metro.encoding=UTF-8
+
+log4j.appender.renrenle=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.renrenle.DatePattern = .yyyy-MM-dd
+log4j.appender.renrenle.File=log/renrenle.log
+log4j.appender.renrenle.layout=org.apache.log4j.PatternLayout
+log4j.appender.renrenle.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.renrenle.encoding=UTF-8
+
+log4j.appender.rainbow=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.rainbow.DatePattern = .yyyy-MM-dd
+log4j.appender.rainbow.File=log/rainbow.log
+log4j.appender.rainbow.layout=org.apache.log4j.PatternLayout
+log4j.appender.rainbow.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.rainbow.encoding=UTF-8
