--- a/mengniu/src/main/resources/rainbow.properties
+++ b/mengniu/src/main/resources/rainbow.properties
@@ -27,6 +27,10 @@ rainbow.receiving.processed.filePath=c:/mengniu/rainbow/receiving/processed/
 #合并完成的最终文件目录 - 订单
 rainbow.output.order.filePath=c:/mengniu/rainbow/output/order/
 
+
+#合并完成的最终文件目录 - 有异常的订单
+rainbow.output.order.exception.filePath=c:/mengniu/rainbow/output/order/exception/
+
 ###############################
 #销售数据下载目录
 rainbow.sales.inbound.filePath=c:/mengniu/rainbow/sales/inbound/
