--- a/mengniu/src/main/resources/system.properties
+++ b/mengniu/src/main/resources/system.properties
@@ -9,6 +9,9 @@ tesseract.path=C:/Tesseract/
 #验证码图片的临时存放目录
 validate.image.path=c:/mengniu/temp/
 
+#有问题的用户名文件目录
+incorrect.user.path=c:/mengniu/incorrectuser/
+
 #订单文件格式
 #不可自行修改
 order.header=Order_No	Order_Date	Store_No	Store_Name	Item_Code	Item_Name	Barcode	Quantity	Unit_Price	Amount
