Update Order API

--- a/mengniu/src/main/resources/carrefour.properties
+++ b/mengniu/src/main/resources/carrefour.properties
@@ -16,7 +16,10 @@ carrefour.sleep.time=1000
 
 ###############################
 #订单下载目录
-carrefour.order.filePath=c:/mengniu/carrefour/order/
+carrefour.order.inbound.filePath=c:/mengniu/carrefour/order/
+
+#订单处理完成的存档目录
+carrefour.order.processed.filePath=c:/mengniu/carrefour/order/processed/
 
 #收货单下载目录
 carrefour.receiving.inbound.filePath=c:/mengniu/carrefour/receiving/inbound/
