--- a/mengniu/src/main/resources/hualian.properties
+++ b/mengniu/src/main/resources/hualian.properties
@@ -16,7 +16,10 @@ hualian.sleep.time=1000
 
 ###############################
 #订单下载目录
-hualian.order.filePath=c:/mengniu/hualian/order/
+hualian.order.inbound.filePath=c:/mengniu/hualian/order/
+
+#订单处理完成的存档目录
+hualian.order.processed.filePath=c:/mengniu/hualian/order/processed/
 
 #收货单下载目录
 hualian.receiving.inbound.filePath=c:/mengniu/hualian/receiving/inbound/
