--- a/mengniu/src/main/resources/rainbow.properties
+++ b/mengniu/src/main/resources/rainbow.properties
@@ -16,7 +16,10 @@ rainbow.sleep.time=1000
 
 ###############################
 #订单下载目录
-rainbow.order.filePath=c:/mengniu/rainbow/order/
+rainbow.order.inbound.filePath=c:/mengniu/rainbow/order/
+
+#订单处理完成的存档目录
+rainbow.order.processed.filePath=c:/mengniu/rainbow/order/processed/
 
 #收货单下载目录
 rainbow.receiving.inbound.filePath=c:/mengniu/rainbow/receiving/inbound/
