--- a/mengniu/src/main/resources/renrenle.properties
+++ b/mengniu/src/main/resources/renrenle.properties
@@ -16,7 +16,10 @@ renrenle.sleep.time=1000
 
 ###############################
 #订单下载目录
-renrenle.order.filePath=c:/mengniu/renrenle/order/
+renrenle.order.inbound.filePath=c:/mengniu/renrenle/order/
+
+#订单处理完成的存档目录
+renrenle.order.processed.filePath=c:/mengniu/renrenle/order/processed/
 
 #收货单下载目录
 renrenle.receiving.inbound.filePath=c:/mengniu/renrenle/receiving/inbound/
