--- a/mengniu/src/main/resources/tesco.properties
+++ b/mengniu/src/main/resources/tesco.properties
@@ -16,7 +16,10 @@ tesco.sleep.time=1000
 
 ###############################
 #订单下载目录
-tesco.order.filePath=c:/mengniu/tesco/order/
+tesco.order.inbound.filePath=c:/mengniu/tesco/order/
+
+#订单处理完成的存档目录
+tesco.order.processed.filePath=c:/mengniu/tesco/order/processed/
 
 #收货单下载目录
 tesco.receiving.inbound.filePath=c:/mengniu/tesco/receiving/inbound/
