--- a/mengniu/src/main/resources/yonghui.properties
+++ b/mengniu/src/main/resources/yonghui.properties
@@ -16,7 +16,10 @@ yonghui.sleep.time=1000
 
 ###############################
 #订单下载目录
-yonghui.order.filePath=c:/mengniu/yonghui/order/
+yonghui.order.inbound.filePath=c:/mengniu/yonghui/order/
+
+#订单处理完成的存档目录
+yonghui.order.processed.filePath=c:/mengniu/yonghui/order/processed/
 
 #收货单下载目录
 yonghui.receiving.inbound.filePath=c:/mengniu/yonghui/receiving/inbound/
