Update Summary config

--- a/mengniu/src/main/resources/hualian.properties
+++ b/mengniu/src/main/resources/hualian.properties
@@ -27,6 +27,9 @@ hualian.receiving.inbound.filePath=c:/mengniu/hualian/receiving/inbound/
 #收货单处理完成的存档目录
 hualian.receiving.processed.filePath=c:/mengniu/hualian/receiving/processed/
 
+#处理过程中有问题的收货单目录
+hualian.receiving.exception.filePath=c:/mengniu/hualian/receiving/exception/
+
 #合并完成的最终文件目录 - 订单
 hualian.output.order.filePath=c:/mengniu/hualian/output/order/
 
