--- a/mengniu/src/main/resources/log4j.properties
+++ b/mengniu/src/main/resources/log4j.properties
@@ -11,7 +11,7 @@ log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d{ABSOLUTE} %5p %t %c{2}:%L - %m%n
 log4j.appender.logfile.encoding=UTF-8
 
-log4j.logger.com.rsi.mengniu.retailer.common.service=INFO, carrefour,tesco,yonghui
+log4j.logger.com.rsi.mengniu.retailer.common.service=INFO, carrefour,tesco,yonghui, hualian, metro, renrenle, rainbow
 log4j.logger.com.rsi.mengniu.retailer.carrefour.service=INFO, carrefour
 log4j.logger.com.rsi.mengniu.retailer.tesco.service=INFO, tesco
 log4j.logger.com.rsi.mengniu.retailer.yonghui.service=INFO, yonghui
@@ -19,7 +19,6 @@ log4j.logger.com.rsi.mengniu.retailer.hualian.service=INFO, hualian
 log4j.logger.com.rsi.mengniu.retailer.metro.service=INFO, metro
 log4j.logger.com.rsi.mengniu.retailer.renrenle.service=INFO, renrenle
 log4j.logger.com.rsi.mengniu.retailer.rainbow.service=INFO, rainbow
-
 
 
 log4j.appender.carrefour=org.apache.log4j.DailyRollingFileAppender
@@ -43,15 +42,6 @@ log4j.appender.yonghui.File=log/yonghui.log
 log4j.appender.yonghui.layout=org.apache.log4j.PatternLayout
 log4j.appender.yonghui.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
 log4j.appender.yonghui.encoding=UTF-8
-
-
-log4j.appender.carrefour=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.carrefour.DatePattern = .yyyy-MM-dd
-log4j.appender.carrefour.File=log/carrefour.log
-log4j.appender.carrefour.layout=org.apache.log4j.PatternLayout
-log4j.appender.carrefour.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
-log4j.appender.carrefour.encoding=UTF-8
-
 
 log4j.appender.hualian=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.hualian.DatePattern = .yyyy-MM-dd
@@ -81,3 +71,14 @@ log4j.appender.rainbow.File=log/rainbow.log
 log4j.appender.rainbow.layout=org.apache.log4j.PatternLayout
 log4j.appender.rainbow.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
 log4j.appender.rainbow.encoding=UTF-8
+
+
+log4j.logger.summary.rainbow=INFO, summary_rainbow
+
+
+log4j.appender.summary_rainbow=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.summary_rainbow.DatePattern = .yyyy-MM-dd
+log4j.appender.summary_rainbow.File=log/summary_rainbow.log
+log4j.appender.summary_rainbow.layout=org.apache.log4j.PatternLayout
+log4j.appender.summary_rainbow.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.summary_rainbow.encoding=UTF-8
