--- a/mengniu/src/main/resources/rainbow.properties
+++ b/mengniu/src/main/resources/rainbow.properties
@@ -27,6 +27,9 @@ rainbow.receiving.inbound.filePath=c:/mengniu/rainbow/receiving/inbound/
 #收货单处理完成的存档目录
 rainbow.receiving.processed.filePath=c:/mengniu/rainbow/receiving/processed/
 
+#处理过程中有问题的收货单目录
+rainbow.receiving.exception.filePath=c:/mengniu/rainbow/receiving/exception/
+
 #合并完成的最终文件目录 - 订单
 rainbow.output.order.filePath=c:/mengniu/rainbow/output/order/
 
