--- a/mengniu/src/main/resources/renrenle.properties
+++ b/mengniu/src/main/resources/renrenle.properties
@@ -27,6 +27,9 @@ renrenle.receiving.inbound.filePath=c:/mengniu/renrenle/receiving/inbound/
 #收货单处理完成的存档目录
 renrenle.receiving.processed.filePath=c:/mengniu/renrenle/receiving/processed/
 
+#处理过程中有问题的收货单目录
+renrenle.receiving.exception.filePath=c:/mengniu/renrenle/receiving/exception/
+
 #合并完成的最终文件目录 - 订单
 renrenle.output.order.filePath=c:/mengniu/renrenle/output/order/
 
