--- a/mengniu/src/main/resources/tesco.properties
+++ b/mengniu/src/main/resources/tesco.properties
@@ -27,6 +27,9 @@ tesco.receiving.inbound.filePath=c:/mengniu/tesco/receiving/inbound/
 #收货单处理完成的存档目录
 tesco.receiving.processed.filePath=c:/mengniu/tesco/receiving/processed/
 
+#处理过程中有问题的收货单目录
+tesco.receiving.exception.filePath=c:/mengniu/tesco/receiving/exception/
+
 #合并完成的最终文件目录 - 订单
 tesco.output.order.filePath=c:/mengniu/tesco/output/order/
 
