--- a/mengniu/src/main/resources/carrefour.properties
+++ b/mengniu/src/main/resources/carrefour.properties
@@ -27,6 +27,9 @@ carrefour.receiving.inbound.filePath=c:/mengniu/carrefour/receiving/inbound/
 #收货单处理完成的存档目录
 carrefour.receiving.processed.filePath=c:/mengniu/carrefour/receiving/processed/
 
+#处理过程中有问题的收货单目录
+carrefour.receiving.exception.filePath=c:/mengniu/carrefour/receiving/exception/
+
 #合并完成的最终文件目录 - 订单
 carrefour.output.order.filePath=c:/mengniu/carrefour/output/order/
 
