--- a/mengniu/src/main/resources/metro.properties
+++ b/mengniu/src/main/resources/metro.properties
@@ -27,6 +27,9 @@ metro.receiving.inbound.filePath=c:/mengniu/metro/receiving/inbound/
 #收货单处理完成的存档目录
 metro.receiving.processed.filePath=c:/mengniu/metro/receiving/processed/
 
+#处理过程中有问题的收货单目录
+metro.receiving.exception.filePath=c:/mengniu/metro/receiving/exception/
+
 #合并完成的最终文件目录 - 订单
 metro.output.order.filePath=c:/mengniu/metro/output/order/
 
