--- a/mengniu/src/main/resources/yonghui.properties
+++ b/mengniu/src/main/resources/yonghui.properties
@@ -27,6 +27,9 @@ yonghui.receiving.inbound.filePath=c:/mengniu/yonghui/receiving/inbound/
 #收货单处理完成的存档目录
 yonghui.receiving.processed.filePath=c:/mengniu/yonghui/receiving/processed/
 
+#处理过程中有问题的收货单目录
+yonghui.receiving.exception.filePath=c:/mengniu/yonghui/receiving/exception/
+
 #合并完成的最终文件目录 - 订单
 yonghui.output.order.filePath=c:/mengniu/yonghui/output/order/
 
