--- a/mengniu/src/main/resources/log4j.properties
+++ b/mengniu/src/main/resources/log4j.properties
@@ -73,8 +73,56 @@ log4j.appender.rainbow.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
 log4j.appender.rainbow.encoding=UTF-8
 
 
+log4j.logger.summary.carrefour=INFO, summary_carrefour
+log4j.logger.summary.tesco=INFO, summary_tesco
+log4j.logger.summary.yonghui=INFO, summary_yonghui
+log4j.logger.summary.metro=INFO, summary_metro
+log4j.logger.summary.renrenle=INFO, summary_renrenle
+log4j.logger.summary.hualian=INFO, summary_hualian
 log4j.logger.summary.rainbow=INFO, summary_rainbow
 
+
+log4j.appender.summary_carrefour=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.summary_carrefour.DatePattern = .yyyy-MM-dd
+log4j.appender.summary_carrefour.File=log/summary_carrefour.log
+log4j.appender.summary_carrefour.layout=org.apache.log4j.PatternLayout
+log4j.appender.summary_carrefour.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.summary_carrefour.encoding=UTF-8
+
+log4j.appender.summary_tesco=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.summary_tesco.DatePattern = .yyyy-MM-dd
+log4j.appender.summary_tesco.File=log/summary_tesco.log
+log4j.appender.summary_tesco.layout=org.apache.log4j.PatternLayout
+log4j.appender.summary_tesco.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.summary_tesco.encoding=UTF-8
+
+log4j.appender.summary_yonghui=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.summary_yonghui.DatePattern = .yyyy-MM-dd
+log4j.appender.summary_yonghui.File=log/summary_yonghui.log
+log4j.appender.summary_yonghui.layout=org.apache.log4j.PatternLayout
+log4j.appender.summary_yonghui.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.summary_yonghui.encoding=UTF-8
+
+log4j.appender.summary_metro=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.summary_metro.DatePattern = .yyyy-MM-dd
+log4j.appender.summary_metro.File=log/summary_metro.log
+log4j.appender.summary_metro.layout=org.apache.log4j.PatternLayout
+log4j.appender.summary_metro.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.summary_metro.encoding=UTF-8
+
+log4j.appender.summary_renrenle=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.summary_renrenle.DatePattern = .yyyy-MM-dd
+log4j.appender.summary_renrenle.File=log/summary_renrenle.log
+log4j.appender.summary_renrenle.layout=org.apache.log4j.PatternLayout
+log4j.appender.summary_renrenle.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.summary_renrenle.encoding=UTF-8
+
+log4j.appender.summary_hualian=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.summary_hualian.DatePattern = .yyyy-MM-dd
+log4j.appender.summary_hualian.File=log/summary_hualian.log
+log4j.appender.summary_hualian.layout=org.apache.log4j.PatternLayout
+log4j.appender.summary_hualian.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.summary_hualian.encoding=UTF-8
 
 log4j.appender.summary_rainbow=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.summary_rainbow.DatePattern = .yyyy-MM-dd
