Update error log

--- a/mengniu/src/main/resources/log4j.properties
+++ b/mengniu/src/main/resources/log4j.properties
@@ -130,3 +130,16 @@ log4j.appender.summary_rainbow.File=log/summary_rainbow.log
 log4j.appender.summary_rainbow.layout=org.apache.log4j.PatternLayout
 log4j.appender.summary_rainbow.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
 log4j.appender.summary_rainbow.encoding=UTF-8
+
+
+log4j.logger.syserror=INFO, syserror
+
+
+log4j.additivity.syserror = false
+log4j.appender.syserror=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.syserror.DatePattern = .yyyy-MM-dd
+log4j.appender.syserror.File=log/syserror.log
+log4j.appender.syserror.layout=org.apache.log4j.PatternLayout
+log4j.appender.syserror.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.syserror.encoding=UTF-8
+
