--- a/mengniu/src/main/resources/log4j.properties
+++ b/mengniu/src/main/resources/log4j.properties
@@ -87,7 +87,7 @@ log4j.appender.summary_carrefour=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.summary_carrefour.DatePattern = .yyyy-MM-dd
 log4j.appender.summary_carrefour.File=log/summary/summary_carrefour.log
 log4j.appender.summary_carrefour.layout=org.apache.log4j.PatternLayout
-log4j.appender.summary_carrefour.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.summary_carrefour.layout.ConversionPattern=%m%n
 log4j.appender.summary_carrefour.encoding=UTF-8
 
 log4j.additivity.summary_tesco = false
@@ -95,7 +95,7 @@ log4j.appender.summary_tesco=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.summary_tesco.DatePattern = .yyyy-MM-dd
 log4j.appender.summary_tesco.File=log/summary/summary_tesco.log
 log4j.appender.summary_tesco.layout=org.apache.log4j.PatternLayout
-log4j.appender.summary_tesco.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.summary_tesco.layout.ConversionPattern=%m%n
 log4j.appender.summary_tesco.encoding=UTF-8
 
 log4j.additivity.summary_yonghui = false
@@ -103,7 +103,7 @@ log4j.appender.summary_yonghui=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.summary_yonghui.DatePattern = .yyyy-MM-dd
 log4j.appender.summary_yonghui.File=log/summary/summary_yonghui.log
 log4j.appender.summary_yonghui.layout=org.apache.log4j.PatternLayout
-log4j.appender.summary_yonghui.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.summary_yonghui.layout.ConversionPattern=%m%n
 log4j.appender.summary_yonghui.encoding=UTF-8
 
 log4j.additivity.summary_metro = false
@@ -111,7 +111,7 @@ log4j.appender.summary_metro=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.summary_metro.DatePattern = .yyyy-MM-dd
 log4j.appender.summary_metro.File=log/summary/summary_metro.log
 log4j.appender.summary_metro.layout=org.apache.log4j.PatternLayout
-log4j.appender.summary_metro.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.summary_metro.layout.ConversionPattern=%m%n
 log4j.appender.summary_metro.encoding=UTF-8
 
 log4j.additivity.summary_renrenle = false
@@ -119,7 +119,7 @@ log4j.appender.summary_renrenle=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.summary_renrenle.DatePattern = .yyyy-MM-dd
 log4j.appender.summary_renrenle.File=log/summary/summary_renrenle.log
 log4j.appender.summary_renrenle.layout=org.apache.log4j.PatternLayout
-log4j.appender.summary_renrenle.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.summary_renrenle.layout.ConversionPattern=%m%n
 log4j.appender.summary_renrenle.encoding=UTF-8
 
 log4j.additivity.summary_hualian = false
@@ -127,7 +127,7 @@ log4j.appender.summary_hualian=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.summary_hualian.DatePattern = .yyyy-MM-dd
 log4j.appender.summary_hualian.File=log/summary/summary_hualian.log
 log4j.appender.summary_hualian.layout=org.apache.log4j.PatternLayout
-log4j.appender.summary_hualian.layout.ConversionPattern=%d{ABSOLUTE} %5p - %m%n
+log4j.appender.summary_hualian.layout.ConversionPattern=%m%n
 log4j.appender.summary_hualian.encoding=UTF-8
 
 log4j.additivity.summary_rainbow = false
