Update image path

--- a/mengniu/src/main/resources/system.properties
+++ b/mengniu/src/main/resources/system.properties
@@ -10,7 +10,7 @@ datapull.retry.amount=5
 tesseract.path=C:/Tesseract/
 
 #验证码图片的临时存放目录
-validate.image.path=c:/mengniu/temp/
+temp.path=c:/mengniu/temp/
 
 #有问题的用户名文件目录
 incorrect.user.path=c:/mengniu/incorrectuser/
