--- a/mengniu/src/main/resources/hualian.properties
+++ b/mengniu/src/main/resources/hualian.properties
@@ -16,7 +16,7 @@ hualian.sleep.time=1000
 
 ###############################
 #订单下载目录
-hualian.order.inbound.filePath=c:/mengniu/hualian/order/
+hualian.order.inbound.filePath=c:/mengniu/hualian/order/inbound/
 
 #订单处理完成的存档目录
 hualian.order.processed.filePath=c:/mengniu/hualian/order/processed/
