--- a/mengniu/src/main/resources/metro.properties
+++ b/mengniu/src/main/resources/metro.properties
@@ -16,7 +16,7 @@ metro.sleep.time=0
 
 ###############################
 #订单下载目录
-metro.order.inbound.filePath=c:/mengniu/metro/order/
+metro.order.inbound.filePath=c:/mengniu/metro/order/inbound/
 
 #订单处理完成的存档目录
 metro.order.processed.filePath=c:/mengniu/metro/order/processed/
