--- a/mengniu/src/main/resources/rainbow.properties
+++ b/mengniu/src/main/resources/rainbow.properties
@@ -16,7 +16,7 @@ rainbow.sleep.time=1000
 
 ###############################
 #订单下载目录
-rainbow.order.inbound.filePath=c:/mengniu/rainbow/order/
+rainbow.order.inbound.filePath=c:/mengniu/rainbow/order/inbound/
 
 #订单处理完成的存档目录
 rainbow.order.processed.filePath=c:/mengniu/rainbow/order/processed/
