--- a/mengniu/src/main/resources/yonghui.properties
+++ b/mengniu/src/main/resources/yonghui.properties
@@ -16,7 +16,7 @@ yonghui.sleep.time=1000
 
 ###############################
 #订单下载目录
-yonghui.order.inbound.filePath=c:/mengniu/yonghui/order/
+yonghui.order.inbound.filePath=c:/mengniu/yonghui/order/inbound/
 
 #订单处理完成的存档目录
 yonghui.order.processed.filePath=c:/mengniu/yonghui/order/processed/
