--- a/mengniu/src/main/resources/renrenle.properties
+++ b/mengniu/src/main/resources/renrenle.properties
@@ -42,3 +42,9 @@ renrenle.sales.processed.filePath=c:/mengniu/renrenle/sales/processed/
 
 #销售单
 renrenle.output.sales.filePath=c:/mengniu/renrenle/output/sales/
+
+
+
+#合并后的订单文件格式
+#不可自行修改
+renrenle.output.order.header=Order_No	Store_No	Store_Name	Order_Date	Item_Code	Barcode	Item_Name	Order_Qty	Order_Amount	Receiving_Qty	Receiving_Amount	Unit_Price
