--- a/mengniu/pom.xml
+++ b/mengniu/pom.xml
@@ -90,6 +90,11 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/lib/xelem.jar</systemPath>
 		</dependency>
+		<dependency>
+	<groupId>org.codehaus.jackson</groupId>
+	<artifactId>jackson-mapper-asl</artifactId>
+	<version>1.9.13</version>
+</dependency>
 	</dependencies>
 
 	<build>
