--- a/mengniu/src/main/resources/hualian.properties
+++ b/mengniu/src/main/resources/hualian.properties
@@ -13,6 +13,8 @@ hualian.daterange.endDate=2014-01-30
 #每步操作等待时间(毫秒)
 hualian.sleep.time=1000
 
+#河南地区门店号(中孚店52，二七店41，紫东苑店53,嘉茂店55,沃金店56)
+hualian.henan.storeNo=52,41,53,55,56
 
 ###############################
 #订单下载目录
